[package]
name    = "mcache"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["mcache-core", "mcache-macro"]

[workspace.dependencies]
once_cell = "1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
regex = "1"
fred = { version = "10.1.0", features = [
  "enable-rustls-ring",
  "i-scripts",
  "sha-1",
  "subscriber-client",
  "serde-json",
] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", features = ["executor"] }

[dependencies]
mcache-macro = { path = "./mcache-macro" }
mcache-core  = { path = "./mcache-core" }
fred         = { workspace = true }
serde_json   = { workspace = true }
serde        = { workspace = true }
futures      = { workspace = true }
